--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -8,6 +8,7 @@
   <% end %>
 </div>
 
+ <div>
   <div class='calendar'>
     <% @week_days.each do |day| %>
       <div class='item'>
@@ -22,5 +23,6 @@
         <% end %>
         </li>
       </div>
-    <% end %>
+    <% end >
   </div>
+ </div>
