--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -1,4 +1,3 @@
- <div>
   <%= form_with model: @plan, url: calendars_path, class: 'form' do |f| %>
     <%= f.label :日付を選択, class: 'lavel' %>
     <%= f.date_field :date, class: 'date-select' %>
@@ -6,15 +5,14 @@
     <%= f.text_field :plan, class: 'text-input' %>
     <%= f.submit '保存' %>
   <% end %>
-</div>
 
-  <div class='calendar'>
+  <li class='calendar'>
     <% @week_days.each do |day| %>
       <div class='item'>
         <div class='date'>
           <% day[:month] %>/<% day[:date] %>
         </div>
-        <li class='content'>
+        <ul class='content'>
         <% if day[:plans].length != 0 %>
           <% day[:plans].each do |plan| %>
             <ul class='plan-list'>・<%= plan %></ul>
