--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -9,7 +9,7 @@
     <% @week_days.each do |day| %>
       <div class='item'>
         <div class='date'>
-          <%= day[:month] %>/<%= day[:date] %><%= day[:wdays] %>
+          <%= day[:month] %>/<%= day[:date] %><% wday=day[:wday] %><%=@wdays[wday]%>
         </div>
         <ul class='content'>
         <% if day[:plans].length != 0 %>
